force-app/main/default/objects/Project_Time__c/Project_Time__c.object-meta.xml
<CustomObject>
    <description>Time can be associated to projects, and cases (optional).</description>
    <label>Time</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Time No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>