force-app/main/default/objects/Project_Time__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>