force-app/main/default/objects/Project_Time__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>