force-app/main/default/objects/Project_Time__c/fields/Note_Comment__c.field-meta.xml
<CustomField>
    <fullName>Note_Comment__c</fullName>
    <label>Note/Comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>