force-app/main/default/objects/Project_Time__c/fields/SFDC_Projects__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Projects__c</fullName>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipName>Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>