force-app/main/default/objects/Project_Time__c/fields/SFDC_Resource__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipName>R00N50000001dKD2EAM</relationshipName>
    <type>Lookup</type>
</CustomField>