force-app/main/default/objects/Project_Time__c/listViews/AllTime.listView-meta.xml
<ListView>
    <fullName>AllTime</fullName>
    <columns>NAME</columns>
    <columns>SFDC_Projects__c</columns>
    <columns>SFDC_Resource__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>Hours__c</columns>
    <columns>Billable__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Time</label>
    <language>en_US</language>
</ListView>